fixed menu and changing theme on mobile

--- a/src/content.css
+++ b/src/content.css
@@ -2,7 +2,7 @@
   --mode-scale: 0;
 }
 
-#nav-bar {
+#desktop-nav-bar {
   width: 100%;
   height: 8vh;
   display: grid;
@@ -10,6 +10,18 @@
   justify-content: center;
   position: fixed;
   color: inherit;
+  overflow:hidden;
+  clip: rect(auto, auto, auto, auto);
+}
+#mobile-nav-bar {
+  width: 100%;
+  height: 8vh;
+  display: grid;
+  grid: auto/ repeat(8, 1fr);
+  justify-content: center;
+  position: fixed;
+  color: inherit;
+  overflow:hidden;
 }
 #logo {
   text-decoration: none;
@@ -55,7 +67,7 @@ div.ripple {
   transform: scale(0);
   animation: ripple-background 2000ms ease-in;
   background-color: white;
-  z-index: -1;
+  z-index: -10;
 }
 
 @keyframes ripple-background {
@@ -81,6 +93,8 @@ div.ripple {
   display:grid;
   grid:1fr auto/auto;
   justify-content: center;
+  z-index: 9;
+  display: none;
 }
 #mobile-menu a {
   text-decoration: none;
@@ -95,14 +109,14 @@ div.ripple {
   align-items: center;
   row-gap: 2rem;
   width:50vw;
-  font-size: 4rem;
+  font-size: 3rem;
 }
 #mobile-dark-div{
   display:flex;
   justify-content: center;
 }
 #mobile-menu #mobile-dark-mode{
-  margin-bottom: 35%;
+  margin-bottom: 70%;
   top:0;
 }
 #mobile-dark-mode {
@@ -112,4 +126,21 @@ div.ripple {
   background-color: transparent;
   position: relative;
   top: 35%;
+}
+
+
+#desktop-home-body{
+  height:500vh;
+  width:100%;
+  position: relative;
+  top:8vh;
+  z-index: -1;
+}
+
+#mobile-home-body{
+  height:500vh;
+  width:100%;
+  position: relative;
+  top:8vh;
+  z-index: -1;
 }
