--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,6 @@
+:root {
+  --root-height:auto;
+}
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
@@ -17,5 +20,7 @@ code {
 
 #root{
   width:100%;
-  height: 500vh;
+  height:var(--root-height);
+  overflow: hidden;
 }
+
